hphp/hack/test/typecheck/nameof/undefined_class.php
<?hh

<<file: __EnableUnstableFeatures('nameof_class')>>

function f(): void {
  nameof C;
}
